# CppLinq

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
cmake/: cpplinq-config.cmake
include/linq/: aggregate.hpp  core.hpp  query.hpp  string.hpp  to_container.hpp  winrt.hpp
test/: CMakeLists.txt  aggregate.cpp  aggregate_test.cpp  aggregate_test.hpp  anyall.cpp  cast.cpp  chain.cpp  concat.cpp  core_test.cpp  core_test.hpp  count.cpp  default.cpp  enumerable.cpp  extension.cpp  extension_test.cpp  extension_test.hpp  firstlast.cpp  for_each.cpp  get_at.cpp  group.cpp  index_of.cpp  insert.cpp  instr.cpp  io_lines.cpp  join.cpp  joinstr.cpp  main.cpp  minmax.cpp  pend.cpp  query_test.cpp  query_test.hpp  range.cpp  repeat.cpp  replace.cpp  reverse.cpp  select.cpp  select_many.cpp  set.cpp  single.cpp  skip.cpp  (+14 more)
